--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,8 @@ before_install:
 
 install:
   - cd gdal
-  - CC="gcc-4.8 -std=c11" CXX="g++-4.8 -std=c++11" ./configure --prefix=/usr --without-libtool --enable-debug --with-jpeg12 --with-python --with-poppler --with-podofo --with-spatialite --with-mysql --with-liblzma --with-webp --with-java --with-mdb --with-jvm-lib-add-rpath --with-epsilon --with-gta --with-ecw=/usr/local --with-mrsid=/usr/local --with-mrsid-lidar=/usr/local --with-fgdb=/usr/local --with-libkml --with-openjpeg=/usr/local --with-mongocxx=/usr/local
+# Disable --with-fgdb=/usr/local since it causes /usr/local/include/GeodatabaseManagement.h:56:1: error: expected constructor, destructor, or type conversion before ‘(’ token EXT_FILEGDB_API fgdbError CreateGeodatabase(const std::wstring& path, Geodatabase& geodatabase);
+  - CC="gcc-4.8 -std=c11" CXX="g++-4.8 -std=c++11" ./configure --prefix=/usr --without-libtool --enable-debug --with-jpeg12 --with-python --with-poppler --with-podofo --with-spatialite --with-mysql --with-liblzma --with-webp --with-java --with-mdb --with-jvm-lib-add-rpath --with-epsilon --with-gta --with-ecw=/usr/local --with-mrsid=/usr/local --with-mrsid-lidar=/usr/local  --with-libkml --with-openjpeg=/usr/local --with-mongocxx=/usr/local
   - make -j3
   - cd apps
   - make test_ogrsf
@@ -123,11 +124,11 @@ script:
   - unzip PGeoTest.zip
   - cd ../../..
 # Run ogr_fgdb.py in isolation from the rest
-  - cd ogr
-  - python ogr_fgdb.py
-  - mkdir disabled
-  - mv ogr_fgdb.* disabled
-  - cd ..
+#  - cd ogr
+#  - python ogr_fgdb.py
+#  - mkdir disabled
+#  - mv ogr_fgdb.* disabled
+#  - cd ..
 # Run ogr_pgeo.py in isolation from the rest
   - cd ogr
   - python ogr_pgeo.py
