--- a/.travis.yml
+++ b/.travis.yml
@@ -192,7 +192,7 @@ script:
   - mv ogr_pgeo.* disabled
   - cd ..
 # Run all the Python autotests
-  - GDAL_SKIP="JP2ECW ECW" python run_all.py
+  - python run_all.py
 # A bit messy, but force testing with libspatialite 4.0dev (that has been patched a bit to remove any hard-coded SRS definition so it is very small)
   - cd ogr
   - wget http://s3.amazonaws.com/etc-data.koordinates.com/gdal-travisci/libspatialite4.0dev_ubuntu12.04-64bit_srs_stripped.tar.gz
